--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "discord-clone",
+  "version": "1.0.0",
+  "description": "A real-time chat application inspired by Discord",
+  "scripts": {
+    "dev": "concurrently \"cd backend && source venv/bin/activate && uvicorn main:app --reload\" \"cd frontend && npm run dev\"",
+    "build": "cd frontend && npm run build",
+    "backend": "cd backend && source venv/bin/activate && uvicorn main:app --reload",
+    "frontend": "cd frontend && npm run dev"
+  },
   "dependencies": {
     "react-router-dom": "^7.9.3"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.0"
   }
 }
+
