--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.95.0
 uvicorn>=0.21.0
 python-dotenv>=0.21.0
 sqlalchemy>=1.4.41
-psycopg2>=2.9.6
+psycopg2-binary
 pydantic>=1.10.7
 passlib[bcrypt]>=1.7.4
+python-jose
